<resources>
    <string name="app_name">呱呱安卓</string>

    <string name="start_skip">跳过</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <string name="nav_bottom_main_article">文章</string>
    <string name="nav_bottom_main_category">类别</string>
    <string name="nav_bottom_main_about">关于</string>

    <string name="nav_open">打开导航栏</string>
    <string name="nav_close">关闭导航栏</string>
    <string name="nav_sign_out">退出</string>

    <!--登录-->
    <string name="login_click_to_login">点击登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_again_hint">请再次输入密码</string>
    <string name="login_have_no_account"><u>还没有账号？注册一个吧</u></string>
    <string name="login_have_account"><u>已有账号，请登录</u></string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">退出成功</string>
    <string name="register_success">注册成功</string>
    <string name="login_no_username">请输入用户名</string>
    <string name="login_no_password">请输入密码</string>
    <string name="login_password_visible">密码可见</string>
    <string name="register_username_invalidate">请正确输入用户名：字母或下划线开头，4–16个字符</string>
    <string name="register_password_invalidate">请正确输入密码：大写字母，小写字母，数字，特殊符号必须四选三，长度至少6位</string>
    <string name="register_password_different">两次输入密码不一致</string>
    <string name="logout_confirm">确定退出呱呱安卓吗？</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>

    <!--个人中心-->
    <string name="mine_username">用户名</string>
    <string name="mine_camera">拍摄照片</string>
    <string name="mine_gallery">从相册中选取</string>

    <string name="tl_article_suggestion">推荐</string>
    <string name="tl_article_collection">收藏</string>

    <string name="tv_empty">暂无内容</string>
    <string name="tv_search_history">搜索历史</string>
    <string name="tv_clean_history">清除历史</string>
    <string name="tv_delete">删除</string>

    <string name="toast_network_unavailable">网络不可用</string>
    <string name="toast_copy_link">已复制链接</string>
    <string name="toast_add_collection_success">添加收藏成功</string>
    <string name="toast_add_collection_fail">添加收藏失败</string>
    <string name="toast_remove_collection_success">取消收藏成功</string>
    <string name="toast_remove_collection_fail">取消收藏失败</string>
    <string name="toast_searching">正在搜索%1$s</string>
    <string name="toast_press_more">再按一次退出</string>
    <string name="toast_login_first">请先登录</string>
    <string name="toast_update_avatar_success">更换头像成功</string>

    <string name="tb_article">文章</string>
    <string name="tb_category">类别</string>
    <string name="tb_detail">文章详情</string>
    <string name="tb_search">请输入文章名搜索</string>
    <string name="tb_mine">个人中心</string>

    <string name="detail_collect">添加收藏</string>
    <string name="detail_not_collect">取消收藏</string>
    <string name="detail_share">分享</string>
    <string name="detail_link">复制链接</string>
    <string name="detail_browser">系统浏览器打开</string>

    <string name="about_update">更新</string>
    <string name="about_appreciate">致谢</string>
    <string name="about_license">授权</string>
    <string name="about_support">支持</string>
    <string name="about_link_hongyang">https://github.com/hongyangAndroid</string>
    <string name="about_link_ilyle">https://github.com/ilyle</string>
    <string name="about_mail">617314917@qq.com</string>

</resources>
