<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_detail_collect"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_collect"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_collect"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/detail_collect"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_detail_share"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_share"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_share"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/detail_share"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_detail_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_link"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_link"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/detail_link"
        android:textSize="16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_detail_browser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableLeft="@drawable/ic_browser"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_browser"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/detail_browser"
        android:textSize="16sp" />

</LinearLayout>
